--- a/client/src/styles/manageStudents.css
+++ b/client/src/styles/manageStudents.css
@@ -70,11 +70,7 @@
 }
 
 .view-toggle.active {
-  background: linear-gradient(
-    135deg,
-    var(--primary-color),
-    var(--secondary-color)
-  );
+  background: #9f1c33;
   color: white;
   box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3);
 }
@@ -95,6 +91,7 @@
   border: 1px solid var(--border-color);
   border-radius: 12px;
   overflow: hidden;
+
   box-shadow: 0 4px 12px var(--shadow-color);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -107,12 +104,8 @@
 .card-header {
   text-align: center;
   padding: 1.5rem;
-  background: linear-gradient(
-    135deg,
-    var(--primary-color),
-    var(--secondary-color)
-  );
-  color: white;
+  background-color: lightblue !important;
+  color: white !important;
 }
 
 .profile-photo {
@@ -180,7 +173,7 @@
 }
 
 .edit-btn {
-  background-color: var(--success-color);
+  background-color: #9f1c33 !important;
   color: white;
 }
 
@@ -221,7 +214,7 @@
 }
 
 .students-table th {
-  background-color: #2c3e50;
+  background-color: #9f1c33;
   font-weight: 600;
   color: white;
   position: sticky;
