--- a/client/src/styles/admin-layout.css
+++ b/client/src/styles/admin-layout.css
@@ -17,6 +17,8 @@
   height: 65px;
   width: auto;
   margin-right: 10px;
+  border-radius: 15px;
+  margin-top: 10px;
 }
 
 /* Responsive adjustments */
@@ -51,8 +53,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
   padding: 0 1.5rem;
 }
 
